fix scrollbar in hiring menu

--- a/game/miscTemplates/game/client/game.less
+++ b/game/miscTemplates/game/client/game.less
@@ -11,6 +11,7 @@
     float:right;
     background-color: @panel_bg;
     overflow-y: auto;
+    overflow-x: hidden;
     z-index: 1;
     -webkit-user-select: text;
     -khtml-user-select: text;
