--- a/game/rightPanels/client/rp.less
+++ b/game/rightPanels/client/rp.less
@@ -15,7 +15,7 @@
 }
 
 #rp_hire_army {
-	width:450px;
+	max-width:480px;
 }
 
 #rp_move_unit {
